[metadata]
name = lemaster
version = 0.1.0
url = https://github.com/cganterh/lemaster
author = Cristóbal Ganter
author_email = cganterh@gmail.com
description = Master plugin for the Le bot.
long_description = file: README.rst
keywords = python, python3, telegram-bot, chatbot
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Chat

[options]
install_requires = python-telegram-bot~=10.0
py_modules = lemaster
test_suite = tests
python_requires = ~=3.5

[options.entry_points]
le.handlers = le_master_handler=lemaster:_handler
le.parsers = le_master_parser=lemaster:_parser

[coverage:run]
include = lemaster.py